add name project composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "leandreaci/Filterable",
+    "name": "leandreaci/filterable",
     "description": "Filter package to Laravel/Lumen",
     "type": "library",
     "authors": [
