--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/database": "^8.0",
-        "illuminate/http": "^8.0"
+        "illuminate/database": ">8.0",
+        "illuminate/http": ">8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.10"
